# phonogen

./: README.md  pyproject.toml
phonogen/: inventory.py  phones.py  syllables.py  words.py
