[tool.poetry]
name = "phonogen"
version = "0.1.0"
description = ""
authors = ["RasterMk2 <70229194+RasterMk2@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.rich.dependencies]
rich = "^13.5.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
